vcs/specs/parser/fail/statements/provide_missing_equals.vr
// @test: parse-fail
// @level: L0
// @tags: parser, statements, provide, equals, error
// @description: Test provide statement missing equals sign
// @expected-error: E044

fn test() {
    provide Database db;
}
